--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.4",
     "@prisma/client": "^6.18.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-slot": "^1.2.3",
     "@reduxjs/toolkit": "^2.9.2",
+    "@svgr/webpack": "^8.1.0",
     "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-query-devtools": "^5.90.2",
     "class-variance-authority": "^0.7.1",
@@ -30,7 +34,9 @@
     "nodemailer": "^6.10.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-is": "^18.3.1",
     "react-redux": "^9.2.0",
+    "sass": "^1.93.2",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12"
   },
@@ -40,6 +46,7 @@
     "@types/nodemailer": "^7.0.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/webpack": "^5.28.5",
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
     "prisma": "^6.18.0",
